--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/README.me
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/README.me
@@ -8,4 +8,20 @@ npm: 6.13.6
     i는 install의 축약어고 -g 옵션은 global의 약자다.
 
   npm init으로 프로젝트 생성
+  
+  npm의 버전 관리 방식
+    유의적 버전(Sementic Version) 방식으로 패키지 버전을 관리한다.
+      주(Major).부(Minor).수(Patch) 세 가지 숫자를 조합해 버전을 관리한다.
+        Major: 기존 버전과 호환되지 않게 변경한 경우
+        Minor: 기존 버전과 호환되면서 기능이 추가된 경우
+        Patch: 기존 버전과 호환되면서 버그를 수정한 경우
+    버전의 범위
+      16.12.2 고정값으로 설정
+      > 16.12.2 버전보다 큰 버전을 설정
+      >= 16.12.2 같은 버전이거나 큰 버전을 설정
+      < 16.12.2 버전보다 작은 버전을 설정
+      <= 16.12.2 같은 버전이거나 작은 버전을 설정
+      ~16.12.2는 16.13.0 미만 까지 포함하고 ~16은 17.0.0 미만 까지 포함한다.
+      ^16.12.2는 17.0.0 미만 까지 포함하고 ^16은 16.0.0부터 16.1.0 미만 까지 포함한다.
+
     
