--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/README.me
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/README.me
@@ -71,3 +71,19 @@ module.exports = {
 ...
 ```
 
+실습 정보
+[예제 및 문제](https://github.com/jeonghwan-kim/lecture-frontend-dev-env)
+> * 1-webpack/1-entry: 웹팩 엔트리/아웃풋 실습
+> * 1-webpack/2-loader: 웹팩 로더 실습
+> * 1-webpack/3-plugin: 웹팩 플러그인 실습
+> * 2-babel/1-babel: 바벨 실습
+> * 2-babel/2-sass: 사스 실습
+> * 3-lint/1-eslint: 린트 실습
+> * 3-lint/2-prettier: 프리티어 실습
+> * 4-webpack/1-dev-server: 웹팩 개발 서버 실습
+> * 4-webpack/2-hot: 웹팩 핫로딩 실습
+> * 4-webpack/3-optimazation: 웹팩 최적화 실습
+> * 5-sample/1-react: 리액트 샘플 실습
+> * master: 최종 결과물
+
+위는 실습할 때 사용할 브랜치다.
