scripte bug fix.

--- a/inflearn/webpack-v4/README.me
+++ b/inflearn/webpack-v4/README.me
@@ -29,7 +29,7 @@ i는 install의 축약어고 -g 옵션은 global의 약자다.
 # webpack
 bundling을 하기 위한 도구이며, 강의에서 사용하는 버전은 4을 사용함.
 ```sh
-npm i -d webpack@4.41.5 webpack-cli@3.3.10
+npm i -D webpack@4.41.5 webpack-cli@3.3.10
 ```
 node_modules의 .bin directory가 생기고 그 안에 webpack를 사용할 수 있는 스크립트가 생김.
 실행할 때 인자로 필수 옵션이 필요함.
